# Dikunt

./: ChangeLog.md  Dikunt.cabal  LICENSE  README  Setup.hs  TODO.txt
data/: dikunt.config  mundheld.txt  trump.txt
main/: Main.hs
plugins/AsciiPicture/: Main.hs
plugins/AsciiText/: Main.hs
plugins/Asked/: Main.hs
plugins/BCPrice/: Main.hs
plugins/BibleGem/: Main.hs
plugins/DanishMoan/: Main.hs
plugins/Eval/: Main.hs
plugins/FacebookLurker/: main.py
plugins/Fix/: Main.hs
plugins/Greetings/: Main.hs
plugins/Help/: Main.hs
plugins/History/: Main.hs
plugins/Insult/: Main.hs
plugins/Mark/: main.py
plugins/Merry/: Main.hs
plugins/MundHeld/: Main.hs
plugins/News/: Main.hs
plugins/Policeman/: Main.hs
plugins/Quotes/: Main.hs
plugins/Remind/: Main.hs
plugins/TicTacToe/: main.py
plugins/Trump/: Main.hs
plugins/WordReplacer/: Main.hs
src/: AsciiPicture.hs  Bot.hs  BotTypes.hs  ExternalPlugins.hs  Main.hs  Monitoring.hs  Parrot.hs  Utils.hs
src/Functions/: AsciiPicture.hs  AsciiText.hs  BibleGem.hs  DanishMoan.hs  Fix.hs  Greeting.hs  Help.hs  Insult.hs  News.hs  Parrot.hs  Ponger.hs  Trump.hs  WordReplacer.hs
src/IRCParser/: IRCMessageParser.hs  Layer1Impl.hs  Layer2Impl.hs  TestParser.hs
src/IRCWriter/: IRCWriter.hs  Impl.hs
src/Parsers/: IRCMessageParser.hs  Utils.hs
src/Types/: BotTypes.hs  Internal.hs
src/Types/Internal/: Channel.hs  Hostname.hs  IRCUser.hs  Message.hs  Nickname.hs  ServerMessage.hs  Servername.hs  Target.hs  UserServer.hs  Username.hs
test/: Tasty.hs  Tests.hs
test/BotTypes/: Tests.hs
test/IRCMessageParser/: Tests.hs
test/Parsers/: Tests.hs
test/Types/Internal/: ChannelTest.hs  HostnameTest.hs  IRCUserTest.hs  MessageTest.hs  NicknameTest.hs  ServerMessageTest.hs  TargetTest.hs
