name:                Dikunt
version:             0.0.1.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          data/dikunt.config,
                     data/WordReplacerData.db,
                     data/InsultData.db

library
  build-depends:       base >=4.8 && <4.10,
                       network >=2.6 && <2.7,
                       mtl >=2.2.1,
                       process >=1.2,
                       cmdargs >=0.10.14,
                       MissingH >=1.4.0.1,
                       safe >=0.3.9,
                       regex-pcre >=0.94.4,
                       markov-chain >=0.0.3.4,
                       random >=1.1,
                       containers >=0.5.7.1,
                       time >=1.6.0.1,
                       download >=0.3.2.4,
                       feed >=0.3.11.1,
                       random-extras >=0.19,
                       random-fu >=0.2.7.0,
                       bytestring >=0.10.8.1,
                       aeson >=0.11.2.0,
                       directory >=1.2.6.2,
                       unix >=2.7.2.0
  GHC-Options:         -Wall
  exposed-modules:     Bot,
                       BotTypes,
                       Monitoring,
                       IRCParser.IRCMessageParser,
                       IRCWriter.IRCWriter,
                       IRCWriter.Impl,
                       IRCParser.Layer1Impl,
                       IRCParser.Layer2Impl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite Tasty
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.9,
                       safe >=0.3.9,
                       regex-pcre >=0.94.4,
                       mtl >=2.2.1,
                       time >=1.6.0.1,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       QuickCheck >=2.9.1
  hs-source-dirs:      test, src
  main-is:             Tasty.hs
  default-language:    Haskell2010
  GHC-Options:         -Wall

executable Dikunt
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       network >=2.6 && <2.7,
                       mtl >=2.2.1,
                       process >=1.2,
                       cmdargs >=0.10.14,
                       MissingH >=1.4.0.1,
                       safe >=0.3.9,
                       regex-pcre >=0.94.4,
                       markov-chain >=0.0.3.4,
                       random >=1.1,
                       containers >=0.5.7.1,
                       time >=1.6.0.1,
                       download >=0.3.2.4,
                       feed >=0.3.11.1,
                       random-extras >=0.19,
                       random-fu >=0.2.7.0,
                       bytestring >=0.10.8.1,
                       aeson >=0.11.2.0,
                       directory >=1.2.6.2,
                       unix >=2.7.2.0,
                       Dikunt,
                       configurator >=0.3.0.0
  GHC-Options:         -Wall
  hs-source-dirs:      main
  default-language:    Haskell2010

executable DanishMoan
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       safe >=0.3.9,
                       regex-pcre >=0.94.4,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/DanishMoan/
  default-language:    Haskell2010

executable BibleGem
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       bytestring >=0.10.8.1,
                       download >=0.3.2.4,
                       safe >=0.3.9,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/BibleGem/
  default-language:    Haskell2010

executable WordReplacer
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       safe >=0.3.9,
                       sqlite-simple >=0.4.13.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/WordReplacer/
  default-language:    Haskell2010

executable AsciiPicture
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       safe >=0.3.9,
                       containers >=0.5.7.1,
                       process >=1.2,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/AsciiPicture/
  default-language:    Haskell2010

executable AsciiText
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       safe >=0.3.9,
                       process >=1.2,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/AsciiText/
  default-language:    Haskell2010

executable Greetings
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       safe >=0.3.9,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Greetings/
  default-language:    Haskell2010

executable Insult
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       sqlite-simple >=0.4.13.0,
                       safe >=0.3.9,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Insult/
  default-language:    Haskell2010

executable News
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       safe >=0.3.9,
                       download >=0.3.2.4,
                       feed >=0.3.11.1,
                       errors >=2.1.3,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/News/
  default-language:    Haskell2010
