name:                Dikunt
version:             0.0.1.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
category:            Network
build-type:          Custom
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          data/dikunt.config,
                     data/WordReplacerData.db,
                     data/InsultData.db,
                     data/trump.txt,
                     data/msgLog.db,
                     data/privmsgLog.db

library
  build-depends:       base >=4.8 && <4.10,
                       network >=2.6 && <2.7,
                       process >=1.2,
                       text >=1.2.2.1,
                       QuickCheck >=2.9.1,
                       aeson >=1.2.0.0,
                       bytestring >=0.10.8.1,
                       hslogger >=1.2.10,
                       parsec >=3.1.11,
                       parsec3-numbers >=0.1.0,
                       split >=0.2.3.1,
                       safe >=0.3.9
  GHC-Options:         -Wall
  exposed-modules:     Bot,
                       Types.BotTypes,
                       Parsers.IRCMessageParser,
                       IRCWriter.IRCWriter
  other-modules:       IRCWriter.Impl,
                       Parsers.Utils
                       Utils,
                       Types.Internal
                       Types.Internal.Nickname
                       Types.Internal.Channel
                       Types.Internal.Servername
                       Types.Internal.Hostname
                       Types.Internal.Username
                       Types.Internal.Message
                       Types.Internal.IRCUser
                       Types.Internal.UserServer
                       Types.Internal.Target
                       Types.Internal.ServerMessage
                       Monitoring
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite Tasty
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.9,
                       safe >=0.3.9,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       mtl >=2.2.1,
                       time >=1.6.0.1,
                       process >=1.2,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       hslogger >=1.2.10,
                       parsec >=3.1.11,
                       parsec3-numbers >=0.1.0,
                       split >=0.2.3.1,
                       QuickCheck >=2.9.1
  hs-source-dirs:      test, src
  main-is:             Tasty.hs
  default-language:    Haskell2010
  GHC-Options:         -Wall

executable dikunt
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       cmdargs >=0.10.14,
                       configurator >=0.3.0.0,
                       hslogger >=1.2.10,
                       MissingH >=1.4.0.1,
                       Dikunt
  GHC-Options:         -Wall -threaded
  hs-source-dirs:      main
  default-language:    Haskell2010

executable danishmoan
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       safe >=0.3.9,
                       regex-pcre >=0.94.4,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/DanishMoan/
  default-language:    Haskell2010

executable biblegem
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       bytestring >=0.10.8.1,
                       http-conduit >=2.2.3.1,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/BibleGem/
  default-language:    Haskell2010

executable wordreplacer
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       sqlite-simple >=0.4.13.0,
                       text >=1.2.2.1,
                       split >=0.2.3.1,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/WordReplacer/
  default-language:    Haskell2010

executable asciipicture
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       containers >=0.5.7.1,
                       process >=1.2,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/AsciiPicture/
  default-language:    Haskell2010

executable asciitext
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       process >=1.2,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/AsciiText/
  default-language:    Haskell2010

executable greetings
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Greetings/
  default-language:    Haskell2010

executable insult
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       sqlite-simple >=0.4.13.0,
                       text >=1.2.2.1,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Insult/
  default-language:    Haskell2010

executable news
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       download >=0.3.2.4,
                       feed >=0.3.11.1,
                       errors >=2.1.3,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       parsec >=3.1.11,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/News/
  default-language:    Haskell2010

executable trump
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       markov-chain >=0.0.3.4,
                       random >=1.1,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Trump/
  default-language:    Haskell2010

executable fix
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       mtl >=2.2.1,
                       MissingH >=1.4.0.1,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Fix/
  default-language:    Haskell2010

executable help
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       configurator >=0.3.0.0,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Help/
  default-language:    Haskell2010

executable policeman
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       random-fu >=0.2.7.0,
                       random-extras >=0.19,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Policeman/
  default-language:    Haskell2010

executable asked
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       regex-pcre >=0.94.4,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       random >=1.1,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Asked/
  default-language:    Haskell2010

executable remind
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       aeson >=1.2.0.0,
                       text >=1.2.2.1,
                       unbounded-delays >=0.1.0.10,
                       parsec >=3.1.11,
                       parsec-numbers >=0.1.0,
                       Dikunt
  GHC-Options:         -Wall
  hs-source-dirs:      plugins/Remind/
  default-language:    Haskell2010
